--- a/css/main.css
+++ b/css/main.css
@@ -25,4 +25,34 @@ body div .card{
 .checked{
     background-color: #cfe1b9;
     text-decoration: line-through;
+    
 }
+
+@media (max-width: 990px) {
+     h1{
+      font-size: 100px;
+      
+    }
+    .card input{
+        height: 100px;
+        font-size: 45px;
+    }
+    .card #addtaskbtn{
+        height: 80px;
+        font-size: 45px;
+       
+    }
+    #emptytask{
+        font-size: 45px;
+        height: 80px;
+
+        padding-bottom: 10px;
+    }
+    #removetasks{
+        font-size: 40px;
+        height: 70px;
+    }
+    #alltasks{
+        font-size: 50px;
+    }
+  }
